--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -1,22 +1,19 @@
 {
-	"braceStyle": "collapse",
-    "breakChainedMethods": false,
-    "e4x": false,
-    "evalCode": false,
-    "indentChar": "\t",
-    "indentLevel": 0,
-    "indentSize": 1,
-    "indentWithTabs": false,
-    "indentScripts": "keep",
-    "maxPreserveNewlines": 10,
-    "preserveNewlines": true,
-    "jslintHappy": false,
-    "keepArrayIndentation": false,
-    "keepFunctionIndentation": false,
-    "maxPreserveNewlines": 10,
-    "preserveNewlines": true,
-    "spaceBeforeConditional": true,
-    "spaceInParen": false,
-    "unescapeStrings": false,
-    "wrapLineLength": 0
+  "braceStyle": "collapse",
+  "breakChainedMethods": false,
+  "e4x": false,
+  "evalCode": false,
+  "indentChar": " ",
+  "indentLevel": 0,
+  "indentSize": 2,
+  "indentWithTabs": false,
+  "jslintHappy": false,
+  "keepArrayIndentation": false,
+  "keepFunctionIndentation": false,
+  "maxPreserveNewlines": 4,
+  "preserveNewlines": true,
+  "spaceBeforeConditional": true,
+  "spaceInParen": false,
+  "unescapeStrings": false,
+  "wrapLineLength": 0
 }
